Fix table overflow bug

--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -1,5 +1,6 @@
 .table-wrapper {
     overflow: scroll;
+    padding-bottom: 60px;
 }
 
 .table {
